--- a/school/report/identity_card.xml
+++ b/school/report/identity_card.xml
@@ -7,139 +7,93 @@
                     <div class="page" style="height: 2px;">
                         <div class="oe_structure" />
                         <t t-foreach="o" t-as="student">
-                        <style>
-                            .table-borderless td,
-                            .table-borderless th {
-                                border: 0;
-                            }
-                        </style>
-                        <table
-                                width="40%"
-                                height="280px"
-                                style="border: 3px solid black;"
-                                align="center"
-                            >
-                            <tr style="margin-top:5px">
-                                <td colspan="2" align="center">
-                                    <h1><strong>
-                                        <span t-field="student.sudo().school_id.name" />
-                                    </strong></h1>
-                                </td>
-                            </tr>
-                            <tr class="table table-borderless" style="border: 0px;">
-                                <td align="top" colspan="1">
-                                    <img
-                                            t-if="student.photo"
-                                            t-att-src="'data:image/png;base64,%s' % student.photo.decode('utf-8')"
-                                            style="max-height: 300px; max-width: 200px;"
-                                        />
-                                </td>
-                                <td align="left">
-                                    <table width="100%">
-                                        <tr>
-                                            <td
-                                                    style="font-family: 'Helvetica';padding-left:20px;"
-                                                >
-                                                <strong>Name</strong>
-                                            </td>
-                                            <td>
-                                                <strong>: </strong>
-                                            </td>
-                                            <td>
-                                                <span t-field="student.name" />
-                                                <span t-field="student.middle" />
-                                                <span t-field="student.last" />
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td
-                                                    style="font-family: 'Helvetica';padding-left:20px;"
-                                                >
-                                                <strong>Roll No.</strong>
-                                            </td>
-                                            <td>
-                                                <strong>: </strong>
-                                            </td>
-                                            <td>
-                                                <span t-field="student.roll_no" />
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td
-                                                    style="font-family: 'Helvetica';padding-left:20px;"
-                                                >
-                                                <strong>Standard</strong>
-                                            </td>
-                                            <td>
-                                                <strong>: </strong>
-                                            </td>
-                                            <td>
-                                                <span
-                                                        t-field="student.standard_id.standard_id.name"
-                                                    />
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td
-                                                    style="font-family: 'Helvetica';padding-left:20px;"
-                                                >
-                                                <strong>Division</strong>
-                                            </td>
-                                            <td>
-                                                <strong>: </strong>
-                                            </td>
-                                            <td>
-                                                <span
-                                                        t-field="student.standard_id.division_id.name"
-                                                    />
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td
-                                                    style="font-family: 'Helvetica';padding-left:20px;"
-                                                >
-                                                <strong>Medium</strong>
-                                            </td>
-                                            <td>
-                                                <strong>: </strong>
-                                            </td>
-                                            <td>
-                                                <span
-                                                        t-field="student.medium_id.name"
-                                                    />
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td
-                                                    style="font-family: 'Helvetica';padding-left:20px;"
-                                                >
-                                                <strong>BirthDate</strong>
-                                            </td>
-                                            <td>
-                                                <strong>: </strong>
-                                            </td>
-                                            <td>
-                                                <span t-field="student.date_of_birth" />
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td
-                                                    style="font-family: 'Helvetica';padding-left:20px;"
-                                                >
-                                                <strong>Blood Group</strong>
-                                            </td>
-                                            <td>
-                                                <strong>: </strong>
-                                            </td>
-                                            <td>
-                                                <span t-field="student.blood_group" />
-                                            </td>
-                                        </tr>
-                                    </table>
-                                </td>
-                            </tr>
-                        </table>
-                      </t>
+                            <center>
+                                <table class="table table-sm" style="width: 40%;">
+                                    <tr style="">
+                                        <td align="center">
+                                            <h4><strong><span
+                                                        t-field="student.sudo().school_id.name"
+                                                    /></strong></h4>
+                                            <span
+                                                t-field="student.school_id.contact_phone"
+                                                class="fa fa-phone"
+                                            />
+                                        </td>
+                                    </tr>
+                                    <tr style=" border-bottom: 1px solid white;">
+                                        <td align="center">
+                                            <img
+                                                t-if="student.photo"
+                                                t-att-src="'data:image/png;base64,%s' % student.photo.decode('utf-8')"
+                                                style="max-height: 200px; max-width: 150px; border-radius: 40%;"
+                                                height="125"
+                                            />
+                                        </td>
+                                    </tr>
+                                    <tr
+                                        style="border-top: none; border-bottom: 1px solid white;"
+                                    >
+                                        <td style="font-size:24px;" align="center">
+                                            <span t-field="student.name" /> <span
+                                                t-field="student.middle"
+                                            /> <span t-field="student.last" />
+                                        </td>
+                                    </tr>
+                                    <tr
+                                        style="border-top: none; border-bottom: 1px solid white;"
+                                    >
+                                        <td style="font-size:18px;" align="left">
+                                            <strong>Class:</strong>
+                                            <span
+                                                t-field="student.standard_id.standard_id.name"
+                                            />  <span
+                                                t-field="student.standard_id.division_id.name"
+                                            />
+                                        </td>
+                                    </tr>
+                                    <tr
+                                        style="border-top: none; border-bottom: 1px solid white;"
+                                    >
+                                        <td style="font-size:18px;" align="left">
+                                            <strong>Roll No:</strong>
+                                            <span t-field="student.roll_no" />
+                                        </td>
+                                    </tr>
+                                    <tr
+                                        style="border-top: none; border-bottom: 1px solid white;"
+                                    >
+                                        <td style="font-size:18px;" align="left">
+                                            <strong>Medium:</strong>
+                                            <span t-field="student.medium_id.name" />
+                                        </td>
+                                    </tr>
+                                    <tr
+                                        style="border-top: none; border-bottom: 1px solid white;"
+                                    >
+                                        <td style="font-size:18px;" align="left">
+                                            <strong>DOB:</strong>
+                                            <span t-field="student.date_of_birth" />
+                                        </td>
+                                    </tr>
+                                    <tr
+                                        style="border-top: none; border-bottom: 1px solid white;"
+                                    >
+                                        <td style="font-size:18px;" align="left">
+                                            <strong>Mob:</strong>
+                                            <span t-field="student.mobile" />
+                                        </td>
+                                    </tr>
+                                    <tr
+                                        style="border-top: none; border-top: 1px solid white;"
+                                    >
+                                        <td style="font-size:18px;" align="left">
+                                            <strong>Blood Group:</strong>
+                                            <span t-field="student.blood_group" />
+                                        </td>
+                                    </tr>
+                                </table>
+                            </center>
+                        </t>
                    </div>
                 </t>
             </t>
