--- a/school/views/parent_view.xml
+++ b/school/views/parent_view.xml
@@ -101,7 +101,7 @@
                         name="image_1920"
                         widget="image"
                         class="oe_avatar"
-                        options="{&quot;preview_image&quot;: &quot;image_medium&quot;, &quot;size&quot;: [90, 90]}"
+                        options="{'preview_image': 'image_medium', 'size': [90, 90]}"
                     />
                 <div class="oe_title">
                     <h1>
@@ -109,7 +109,7 @@
                                 name="name"
                                 default_focus="1"
                                 placeholder="Name"
-                                attrs="{'required' : [('type', '=', 'contact')]}"
+                                required="type == 'contact'"
                             />
                     </h1>
                 </div>
@@ -140,7 +140,7 @@
                                     name="state_id"
                                     class="o_address_state"
                                     placeholder="State"
-                                    options="{&quot;no_open&quot;: True}"
+                                    options="{'no_open': True}"
                                     context="{'country_id': country_id, 'zip': zip}"
                                 />
                             <field name="zip" placeholder="ZIP" class="o_address_zip" />
@@ -148,7 +148,7 @@
                                     name="country_id"
                                     placeholder="Country"
                                     class="o_address_country"
-                                    options="{&quot;no_open&quot;: True, &quot;no_create&quot;: True}"
+                                    options="{'no_open': True, 'no_create': True}"
                                 />
                         </div>
                     </group>
@@ -157,7 +157,7 @@
                         <field name="mobile" widget="phone" />
                         <field name="user_ids" invisible="1" />
                         <field name="email" widget="email" required="1" />
-                        <field name="title" options="{&quot;no_open&quot;: True}" />
+                        <field name="title" options="{'no_open': True}" />
                         <field name="lang" />
                         <field
                                 name="category_id"
